@@ -9,6 +9,9 @@ New in spot 2.8.6.dev (not yet released)
     incorrectly tagged as complete, causing the print_hoa() function
     to raise an exception.
 
+  - autfilt --uniq was not considering differences in acceptance
+    conditions or number of states when discarding automata.
+
 New in spot 2.8.6 (2020-02-19)
 
   Bugs fixed:
